--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="assets/css/Responsive-YouTube-Video-Section-Dark-Centered.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Video-Responsive.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7733404173994563"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -154,5 +156,6 @@
     <script src="assets/js/Animated-Typing-With-Blinking.js"></script>
     <script src="assets/js/Dark-Mode-Switch.js"></script>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7733404173994563"
+     crossorigin="anonymous"></script>
 </html>
