--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
 
 <div class="container">
-    <br><h1>JAVA SUMMER BOOTCAMP OF 45 DAYS</h1><br>
+    <br><h1>JAVA BOOTCAMP</h1><br>
     <div class="testimonials-clean">
         <div class="ro">
         <div class="col-12 ite">
